[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip_magic_trailing_comma = true
line-length = 88

[tool.mypy]
strict = true
exclude = ["tests/*", "noxfile.py", "init.py"]

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
exclude = ["tests/*", "noxfile.py", "init.py"]

