[metadata]
name = renopro
version = 1.0.0
author = Amade Nemes
author_email = nemesamade@gmail.com
description = Tools to work with reified non-ground ASP programs.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://potassco.org/

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    importlib_metadata;python_version<'3.8'
    clingo
    clorm
    thefuzz
    python-Levenshtein

[options.packages.find]
where = src

[options.extras_require]
format =
    black
    isort
    autoflake
lint_flake8 =
    flake8
    flake8-black
    flake8-isort
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage
doc =
    sphinx
    sphinx_rtd_theme
    nbsphinx
dev =
    renopro[test,typecheck,lint_pylint,lint_flake8]

[options.entry_points]
console_scripts =
    renopro = renopro.__main__:main
